# malloc-best-effort

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: lib.rs
